--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,19 @@ dependencies:
   cloud_functions: ^4.4.0
   shared_preferences: ^2.1.2
   google_fonts: ^4.0.3  
+  # Face verification dependencies
+  google_mlkit_face_detection: ^0.10.0
+  camera: ^0.10.5+5
+  image: ^4.1.3
+  path: ^1.8.3
+  path_provider: ^2.1.1
+  permission_handler: ^11.0.1
+  image_picker: ^1.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_storage: ^11.7.7
 
 dev_dependencies:
   flutter_test:
